Bug 1977411 - Newtab fixing trending search card to align with refined cards r=home-newtab-reviewers,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D260344

--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -9724,6 +9724,12 @@ main section {
   display: flex;
   align-items: center;
 }
+.trending-searches-list-view:not(.placeholder) .trending-searches-list-item.compact a {
+  padding: var(--space-small);
+}
+.trending-searches-list-view:not(.placeholder) .trending-searches-list-item.compact:first-child a {
+  padding-block-start: var(--space-medium);
+}
 .trending-searches-list-view:not(.placeholder) .trending-searches-list-item a img {
   height: var(--icon-size-xlarge);
   width: var(--icon-size-xlarge);
